Nav menu is now fixed on all pages on mobile

--- a/styles.css
+++ b/styles.css
@@ -109,17 +109,24 @@ body {
   height: 100vh;
 }
 
+#video-section .flag-text {
+  z-index: 40;
+}
+
 header {
   transition: background 0.3s ease, padding 0.3s ease;
 }
 
 #projects {
-  
+  z-index: 50;
   overflow: hidden;
   padding-top: 40px;
   margin-top: 0;
 }
 
+#arrow {
+  z-index: 45;
+}
 
 @media (max-width: 640px) {
   #projects {
@@ -230,6 +237,7 @@ header {
 #mobile-menu {
   transform: translateX(-100%);
   transition: transform 0.3s ease-in-out;
+  z-index: 99999;
 }
 
 #menu-toggle:checked ~ #mobile-menu {
@@ -244,6 +252,7 @@ label[for="menu-toggle"] {
 #mobile-menu label {
   z-index: 9999;
   cursor: pointer;
+  padding-top: 25px;
 }
 
 #mobile-bottom-adjust {
